# nudge

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  session-context.md
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml  release.yml
docs/: design-spec.md  journal-spec.md  releasing.md
e2e/: index.html  package-lock.json  package.json  probe-card-brightness.ts  probe-judge.ts  settings.html  vitest.config.ts  vitest.judge.config.ts
e2e/fixtures/: actions.ts  judge.ts  nudge.ts  pixels.ts  settings.ts
e2e/tests/: design-active-row-subtle.test.ts  design-active-row.test.ts  design-card.test.ts  design-click-outside.test.ts  design-first-run.test.ts  design-focus-highlight.test.ts  design-focus-loss.test.ts  design-highlight-inset.test.ts  design-inputs.test.ts  design-pill-click.test.ts  design-pill-hover.test.ts  design-pill.judge.test.ts  design-pill.test.ts  design-placeholder-legible.test.ts  design-static.judge.test.ts  design-static.test.ts  focus-polling.test.ts  form-negative-interval.test.ts  form-reopen.judge.test.ts  form.test.ts  settings.test.ts  smoke.test.ts  switch-away.test.ts
electron/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  settings.html  tsconfig.json  vite.config.ts  vitest.e2e.config.mjs  vitest.native.config.mjs
electron/docs/: manual-verification.md  testing.md
electron/scripts/: build-electron.js  dev-electron.js  gen-icon.js
electron/src/electron/: autostart.ts  config.ts  journal.ts  main.ts  preload.ts  trayIcon.ts
electron/src/renderer/: App.svelte  Settings.svelte  nudge.d.ts  settings-main.ts
electron/src/shared/: autostart.ts  config.ts  hotkey.ts  nudgeFlow.ts  settingsForm.ts
electron/tests/e2e/: global-setup.js  popup.test.js  settings.test.js
electron/tests/e2e/fixtures/: browser.js
electron/tests/native/: popup.test.js  quit.test.js  settings.test.js  timer.test.js
electron/tests/native/fixtures/: electron.js
electron/tests/unit/: autostart.test.ts  config.test.ts  hotkey.test.ts  journal.test.ts  nudgeFlow.test.ts  settingsForm.test.ts  trayIcon.test.ts
scripts/: autostart-check.ps1  build-e2e.sh  native-tests.sh
src/: app.rs  autostart.rs  config.rs  config_watcher.rs  daisy.rs  hotkey.rs  journal.rs  lib.rs  main.rs  nudge_state.rs  settings_app.rs  timer.rs  tray_bridge.rs  word_jump.rs
tests/: native_render.rs  perf_idle.rs
