[package]
name = "nudge"
version = "0.1.0"
edition = "2024"

[lib]
name = "nudge_web"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "nudge"
path = "src/main.rs"

[dependencies]
eframe = "0.31"
chrono = "0.4"
web-time = "1.1"

[target.'cfg(target_os = "windows")'.dependencies]
tray-icon = "0.19"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlCanvasElement", "Element", "Storage"] }
