[package]
name = "nudge"
version = "0.1.0"
edition = "2024"

[lib]
name = "nudge_web"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "nudge"
path = "src/main.rs"

[dependencies]
eframe = "0.31"
chrono = "0.4"
web-time = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = "1"

[target.'cfg(target_os = "windows")'.dependencies]
tray-icon = "0.19"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading"] }
raw-window-handle = "0.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "6"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlCanvasElement", "Element", "Storage"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
